--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -38,8 +38,8 @@
     <!-- Performance: Preload critical fonts (if self-hosted) -->
     <!-- <link rel="preload" href="/fonts/inter-var.woff2" as="font" type="font/woff2" crossorigin="anonymous" /> -->
     
-    <!-- Fonts: Inter (Body), IBM Plex Sans (Headings), IBM Plex Mono (Numbers) -->
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- Font: Inter site-wide -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Performance hints -->
     <meta http-equiv="x-dns-prefetch-control" content="on" />
